--- a/app/pages/files/404.html
+++ b/app/pages/files/404.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>404 Not Found {{location}}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
         .middle {
@@ -11,21 +13,23 @@
             align-items: center;
             height: 100vh;
             text-align: center;
-            flex-direction: column;
+            background-color: #f8f8f8;
         }
 
         h1,
         h2 {
             font-family: 'Roboto', sans-serif;
-            margin: 10px 0;
+            color: #333;
         }
     </style>
 </head>
 
 <body>
     <div class="middle">
-        <h1>404 Not Found</h1>
-        <h2>Not found: {{location}}</h2>
+        <div>
+            <h1>The request file was not found</h1>
+            <h2>File:{{fileName}}</h2>
+        </div>
     </div>
 </body>
 
