--- a/app/pages/404.html
+++ b/app/pages/404.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="http://localhost/assets/img/DevCenterLogo.png" type="image/png">
     <title>404 Not Found {{location}}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
