--- a/app/pages/404.html
+++ b/app/pages/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="http://localhost/assets/img/DevCenterLogo.png" type="image/png">
+    <link rel="icon" type="image/png" href="http://localhost/assets/img/DevCenterLogo.png">
     <title>404 Not Found {{location}}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
@@ -28,7 +28,7 @@
 <body>
     <div class="middle">
         <h1>404 Not Found</h1>
-        <h2>Not found: {{location}}</h2>
+        <h2>Not found {{location}}</h2>
     </div>
 </body>
 
